<resources>
    <string name="app_name">2life</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Đăng nhập</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="dont_have_account">Không có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="or">Hoặc</string>
    <string name="create_now">Tạo ngay</string>
    <string name="sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="username">Tên người dùng</string>
    <string name="check_password">Xác nhận mật khẩu</string>
    <string name="skip">Bỏ qua</string>
    <string name="logout">Log out</string>
    <string name="home">Trang chủ</string>
    <string name="saved">Đã lưu</string>
    <string name="post">Đăng bài</string>
    <string name="search">Tìm kiếm</string>
    <string name="setting">Cài đặt</string>
    <string name="profile">Profile</string>
    <string name="AdMob_id">ca-app-pub-1129851729288654~7213597033</string>
    <string name="AdMob_banner_unit_id">ca-app-pub-1129851729288654/2249044960</string>
    <string name="AdMob_interstitial_unit_id">ca-app-pub-1129851729288654/6418819299</string>
    <!-- strings -->
    <string name="quila_name">Lê Xuân Chính</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Chính!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="hot_news">Tin nổi bật</string>
    <string name="title">Tiêu đề</string>
    <string name="price">Giá</string>
    <string name="area">Diện tích</string>
    <string name="address">Địa chỉ</string>
    <string name="compose">Đăng bài</string>
    <string name="transition_image_detail">image_detail_transition</string>
    <string name="name">lê xuân chính</string>
    <string name="email">lexuanchinh97@gmail.com</string>
    <string name="name_">Lê Xuân Chính</string>
    <string name="phone">01627147982</string>
    <string name="update">Cập nhật</string>
    <string name="name__">Tên</string>
    <string name="Phone">Phone</string>
    <string name="updateInfo">Chỉnh sửa thông tin</string>


    ("Máy lạnh", "Máy giặt", "Tủ lạnh", "WC riêng", "Chổ để xe",
    "Wifi", "Giờ giấc tự do", "Không chung chủ", "Bếp", "Giường ngủ",
    "Tivi", "Tủ quần áo", "Gác lửng", "Camera", "Bảo vệ", "Thú cưng")
    <string name="air_conditioner">Máy lạnh</string>
    <string name="washing">Máy giặt</string>
    <string name="fridge">Tủ lạnh</string>
    <string name="toilet">WC riêng</string>
    <string name="bike_parking">Chổ để xe</string>
    <string name="wifi">Wifi</string>
    <string name="freedom">Giờ giấc tự do</string>
    <string name="house_key">Không chung chủ</string>
    <string name="kitchen">Bếp</string>
    <string name="bed">Giường ngủ</string>
    <string name="television">Tivi</string>
    <string name="closet">Tủ quần áo</string>
    <string name="mezzanine">Gác lửng</string>
    <string name="camera">Camera</string>
    <string name="security">Bảo vệ</string>
    <string name="pet">Thú cưng</string>
    <string name="change_info">Thay đổi thông tin</string>
    <string name="change_pass">Thay đổi mật khẩu</string>
    <string name="update_avatar">Cập nhật ảnh đại diện</string>
    <string name="profile_">Trang cá nhân của bạn</string>
    <string name="signout">Đăng xuất</string>
</resources>
